name:           playground
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/playground#readme>
homepage:       https://github.com/githubuser/playground#readme
bug-reports:    https://github.com/githubuser/playground/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
cabal-version:  >= 1.2
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

library
  build-depends: base >=4.7 && <5, directory, random, bytestring

source-repository head
  type: git
  location: https://github.com/githubuser/playground
